test/corpus/html.txt
========
Simple HTML
========

<p>Simple HTML</p>

-----

(compilation_unit
  (element))

===========
HTML with attributes
===========

<p id="foo" class="bar">HTML with attributes</p>
----

(compilation_unit
  (element
    (html_attribute_name)
    (html_attribute_name)))

===========
Attribute name with space
===========
<p class="foo bar">HTML with attributes</p>

----

(compilation_unit
  (element
    (html_attribute_name)))

=========
Self Closing Tag
=========
<input type="text" value="foo" />
----

(compilation_unit
  (element
    (html_attribute_name)
    (html_attribute_name)))

====
self closing image tag
====
<img src="foo.jpg" />
----

(compilation_unit
  (element
    (html_attribute_name)))

===
HTML boolean attribute
===

<input type="checkbox" checked />
---

(compilation_unit
  (element
    (html_attribute_name)))

===
complex html
===
<itunes:image>http://www.thisdeveloperslife.com/images/logo_full1400.jpg</itunes:image>
---

(compilation_unit
  (element))
